--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "php": ">= 7.1",
+    "php": ">= 7.1 || ^8.0",
     "tracy/tracy": "~2.4.15 || ~2.5.0"
   },
   "require-dev": {
