--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   ],
   "require": {
     "php": ">= 7.1 || ^8.0",
-    "tracy/tracy": "~2.4.15 || ~2.5.0 || ~2.7.0"
+    "tracy/tracy": "~2.4.15 || ~2.5.0 || ~2.7.0 || ~2.8.0"
   },
   "require-dev": {
     "ext-json": "*",
